--- a/app/src/main/res/layout/section_content.xml
+++ b/app/src/main/res/layout/section_content.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
+            android:background="@color/colorPrimaryDark"
             android:id="@+id/IV_Section_Content_Poster"/>
     </android.support.v7.widget.CardView>
 
