--- a/app/src/main/res/layout/fragment_movie_catalog.xml
+++ b/app/src/main/res/layout/fragment_movie_catalog.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MovieCatalog.MovieCatalogFragment">
 
 
@@ -35,6 +36,7 @@
         android:layout_marginEnd="25dp"
         android:padding="10dp"
         android:visibility="gone"
+        android:text="Lista vacia"
         android:id="@+id/TV_Movie_Catalog_Empty"/>
 
 </RelativeLayout>
