--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -5,17 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlack"
-    tools:context=".Fragments.Movie.MovieDetail">
+    tools:context=".MovieDetail.MovieDetailFragment">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
 
             <ImageView
@@ -49,8 +55,8 @@
                 <ImageView
                     android:id="@+id/IV_Movie_Detail_Poster"
                     android:layout_width="130dp"
-                    android:background="@color/colorBlack"
-                    android:layout_height="180dp" />
+                    android:layout_height="180dp"
+                    android:background="@color/colorBlack" />
 
             </android.support.v7.widget.CardView>
 
@@ -111,8 +117,8 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:textSize="13sp"
                 android:textColor="@color/colorWhite"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/cardview"
                 app:layout_constraintTop_toBottomOf="@+id/TV_Movie_Detail_Average" />
@@ -125,63 +131,87 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:textSize="13sp"
                 android:textColor="@color/colorWhite"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/cardview"
                 app:layout_constraintTop_toBottomOf="@+id/TV_Movie_Detail_Genre" />
         </android.support.constraint.ConstraintLayout>
 
-        <LinearLayout
+
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:orientation="vertical">
+            android:layout_marginTop="8dp"
+            android:text="Descripción"
+            android:textColor="@color/colorGrayLight"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Descripción"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:textColor="@color/colorGrayLight"
-                android:layout_marginTop="8dp"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorPrimary"/>
-            <TextView
-                android:id="@+id/TV_Movie_Detail_Overview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorGrayLight"
-                android:textSize="12sp" />
+        <TextView
+            android:id="@+id/TV_Movie_Detail_Overview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:textColor="@color/colorGrayLight"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Elenco principal"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:textColor="@color/colorGrayLight"
-                android:layout_marginTop="8dp"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorPrimary"/>
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Elenco principal"
+            android:textColor="@color/colorGrayLight"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/CTNR_Movie_Detail_Cast"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/TV_Movie_Detail_Overview" />
 
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:id="@+id/CTNR_Movie_Detail_Cast"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/CTNR_Movie_Detail_Cast"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-        </LinearLayout>
+        <TextView
+            android:id="@+id/TV_Movie_Detail_Cast_Error"
+            android:layout_width="match_parent"
+            android:layout_height="17dp"
+            android:text="Reparto no disponible"
+            android:textColor="@color/colorGrayLight"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="@+id/CTNR_Movie_Detail_Cast" />
+
+        <ProgressBar
+            android:id="@+id/PB_Movie_Detail"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="@+id/TV_Movie_Detail_Overview"
+            app:layout_constraintStart_toStartOf="@+id/TV_Movie_Detail_Overview"
+            app:layout_constraintTop_toTopOf="@+id/textView" />
 
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 
 </ScrollView>
