--- a/app/src/main/res/layout/fragment_tvshow_detail.xml
+++ b/app/src/main/res/layout/fragment_tvshow_detail.xml
@@ -6,17 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlack"
-    tools:context=".Fragments.TVShow.TVShowDetail">
+    tools:context=".TVShowDetail.TVShowDetailFragment">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraintLayout2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
 
             <ImageView
@@ -51,8 +55,8 @@
                     android:id="@+id/IV_TVShow_Detail_Poster"
                     android:layout_width="130dp"
                     android:layout_height="180dp"
-                    android:scaleType="centerCrop"
-                    android:background="@color/colorBlack"/>
+                    android:background="@color/colorBlack"
+                    android:scaleType="centerCrop" />
 
             </android.support.v7.widget.CardView>
 
@@ -85,8 +89,8 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:textSize="13sp"
                 android:textColor="@android:color/white"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/cardview"
                 app:layout_constraintTop_toBottomOf="@+id/TV_TVShow_Detail_Average" />
@@ -126,8 +130,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:textSize="13sp"
                 android:textColor="@color/colorGrayLight"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/cardview"
                 app:layout_constraintTop_toBottomOf="@+id/TV_TVShow_Detail_Genre" />
@@ -140,10 +144,10 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
+                android:textColor="@color/colorGrayLight"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/cardview"
-                android:textSize="13sp"
-                android:textColor="@color/colorGrayLight"
                 app:layout_constraintTop_toBottomOf="@+id/TV_TVShow_Detail_Year" />
 
             <TextView
@@ -154,64 +158,88 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
+                android:textColor="@color/colorGrayLight"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.502"
                 app:layout_constraintStart_toEndOf="@+id/cardview"
-                android:textSize="13sp"
-                android:textColor="@color/colorGrayLight"
                 app:layout_constraintTop_toBottomOf="@+id/TV_TVShow_Detail_Episodes" />
         </android.support.constraint.ConstraintLayout>
 
-        <LinearLayout
+
+        <TextView
+            android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:orientation="vertical">
+            android:layout_marginTop="8dp"
+            android:text="Descripción"
+            android:textColor="@color/colorGrayLight"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Descripción"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:textColor="@color/colorGrayLight"
-                android:layout_marginTop="8dp"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorPrimary"/>
-            <TextView
-                android:id="@+id/TV_TVShow_Detail_Overview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorGrayLight"
-                android:textSize="12sp" />
+        <TextView
+            android:id="@+id/TV_TVShow_Detail_Overview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorGrayLight"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Elenco principal"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:textColor="@color/colorGrayLight"
-                android:layout_marginTop="8dp"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorPrimary"/>
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Elenco principal"
+            android:textColor="@color/colorGrayLight"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/TV_TVShow_Detail_Overview" />
 
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:id="@+id/CTNR_TVShow_Detail_Cast"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/CTNR_TVShow_Detail_Cast"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-        </LinearLayout>
+        <TextView
+            android:id="@+id/TV_TVShow_Detail_Cast_Error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Reparto no disponible"
+            android:textColor="@color/colorGrayLight"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="@+id/CTNR_TVShow_Detail_Cast" />
+
+        <ProgressBar
+            android:id="@+id/PB_TVShow_Detail"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 
 </ScrollView>
