--- a/app/src/main/res/layout/section_actor.xml
+++ b/app/src/main/res/layout/section_actor.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
+            android:background="@color/colorGrayDark"
             android:id="@+id/IV_Section_Actor"/>
     </android.support.v7.widget.CardView>
 
