--- a/app/src/main/res/layout/fragment_movie_search.xml
+++ b/app/src/main/res/layout/fragment_movie_search.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MovieCatalog.MovieCatalogContainer">
+    tools:context=".Fragments.MovieCatalog.MovieCatalogContainer">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/TAB_Movie_Search"
