--- a/app/src/main/res/layout/fragment_tvshow_detail.xml
+++ b/app/src/main/res/layout/fragment_tvshow_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlack"
-    tools:context=".TVShowDetail.TVShowDetailFragment">
+    tools:context=".Fragments.TVShowDetail.TVShowDetailFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
