--- a/app/src/main/res/layout/fragment_tvshow_search.xml
+++ b/app/src/main/res/layout/fragment_tvshow_search.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".TVShowCatalog.TVShowCatalogContainer">
+    tools:context=".Fragments.TVShowCatalog.TVShowCatalogContainer">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/TAB_TVShow_Search"
