--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlack"
-    tools:context=".Fragments.MovieDetail.MovieDetailFragment">
+    tools:context=".UI.Fragments.MovieDetail.MovieDetailFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
